# hubo_valve_turning_planner

./: .gitignore  README.md
drchubo_analytical_ik/: CMakeLists.txt  package.xml
drchubo_analytical_ik/include/: drchubo_analytical_ik_main.hpp  drchubo_analytical_ik_solver.hpp
drchubo_analytical_ik/src/: drchubo_analytical_ik_main.cpp  drchubo_analytical_ik_solver.cpp
valve_planner/: CMakeLists.txt  README.md  package.xml  send_trajectories.sh  setup.py
valve_planner/config/: compliance_settings.yaml
valve_planner/launch/: complete_valve_task_exp_sim.launch  complete_valve_task_sim.launch  complete_valve_task_ui.launch  valve_planner.launch  valve_planner_sim.launch  valve_task.launch  valve_task_experimental.launch  valve_task_sim.launch
valve_planner/rvizconfig/: drchubo.perspective  valve_turning_config.rviz  valve_turning_drc_day.rviz
valve_planner/src/valve_planner/: base_wheel_turning.py  drchubo_constrainted_path.py  drchubo_plan_straight_line.py  drchubo_planner_interface.py  drchubo_v2_wheel_turning.py  drchubo_v3_wheel_turning.py  hubo_test_send_command.py  hubo_traj_loader.py  hubo_traj_reader.py  movetraj0.txt  movetraj1.txt  movetraj2.txt  movetraj3.txt  rave2realhubo_v3.py  test_lever_valve_turning.py  test_round_valve_turning.py  test_valve_turning.py
valve_planner/src/valve_planner/files/: movetraj0.txt  movetraj1.txt  movetraj2.txt  movetraj3.txt
valve_planner/trajectories/: closehands_after_movetraj7.traj  closehands_before_movetraj3.traj  movetraj0.traj  movetraj0.txt  movetraj0_retimed.txt  movetraj1.traj  movetraj1.txt  movetraj1_retimed.txt  movetraj2.traj  movetraj2.txt  movetraj2_retimed.txt  movetraj3.traj  movetraj3.txt  movetraj3_retimed.txt  movetraj4.traj  movetraj4.txt  movetraj4_retimed.txt  movetraj5.traj  movetraj5.txt  movetraj5_retimed.txt  movetraj6.traj  movetraj6.txt  movetraj6_retimed.txt  movetraj7.traj  movetraj7.txt  movetraj7_retimed.txt  movetraj8.traj  movetraj8.txt  movetraj8_retimed.txt  openhands_after_movetraj0.traj  openhands_after_movetraj3.traj  openhands_before_movetraj7.traj
